chart issue fixed

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,6 +30,7 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="/styles/angular-chart.css">
     <link rel="stylesheet" href="/styles/angular-chart.min.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
@@ -92,8 +93,8 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/angular.min.js"></script>
-    <script src="/js/dependencies/Chart.min.js"></script>
-    <script src="/js/dependencies/angular-chart.min.js"></script>
+    <script src="/js/dependencies/Chart.js"></script>
+    <script src="/js/dependencies/angular-chart.js"></script>
     <script src="/js/app.js"></script>
     <!--SCRIPTS END-->
   </body>
