building backend completed

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,12 +31,11 @@
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/normalize.css">
     <link rel="stylesheet" href="/styles/angular-chart.css">
-    <link rel="stylesheet" href="/styles/angular-chart.min.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
   </head>
 
-  <body>
+  <body ng-app="dashboard">
     <%- body %>
 
 
