--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,108 +1,104 @@
-$error-color: #ff0000;
+﻿$error-color: #ff0000;
 
-html, body {
-  height: 100%;
-}
-
-[ng-cloak] {
-  display: none !important
-}
+html, body { height: 100%; }
+[ng-cloak] { display: none !important }
 
 .container {
-  @include outer-container(80%);
+    @include outer-container(80%);
 
-  height: 100%;
+    height: 100%;
 
-  & > header {
-    @include row();
+    & > header {
+        @include row();
 
-  }
+    }
 }
 
 .content {
-  @include span-columns(12);
+    @include span-columns(12);
 }
 
 .charts {
-  @include row();
+    @include row();
 
-  height: 100%;
+    height: 100%;
 
-  &.loading {
+    &.loading {
+
+        .loader {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    }
 
     .loader {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-  }
-
-  .loader {
-    display: none;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    background-color: rgba(255, 255, 255, .5);
-  }
-
-  article {
-    @include span-columns(3);
-
-    max-height: 21em;
-
-    h1 {
-      font-size: 1.5em;
-      margin-bottom: 2em;
+        display: none;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        background-color: rgba(255, 255, 255, .5);
     }
 
-    canvas {
-      @include fill-parent();
+    article {
+        @include span-columns(3);
+
+        max-height: 21em;
+
+        h1 {
+            font-size: 1.5em;
+            margin-bottom: 2em;
+        }
+
+        canvas {
+            @include fill-parent();
+        }
     }
-  }
 }
 
 form {
-  @include row();
+    @include row();
 }
 
 legend {
-  position: absolute;
-  left: -9999em;
+    position: absolute;
+    left: -9999em;
 }
 
 label {
-  margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
+
 fieldset {
-  @include span-columns(12);
+    @include span-columns(12);
 
-  border: none;
-  margin: 0;
-  padding: 0;
+    border: none;
+    margin: 0;
+    padding: 0;
 
-  input {
-    margin-bottom: 15px;
-    width: 100%;
-    border: 1px solid #ccc;
-    height: 30px;
-    border-radius: 3px;
-    display: block;
-    padding: 3px;
+    input {
+        margin-bottom: 15px;
+        width: 100%;
+        border: 1px solid #ccc;
+        height: 30px;
+        border-radius: 3px;
+        display: block;
+        padding: 3px;
 
-    &.error {
-      border-color: $error-color;
+        &.error {
+            border-color: $error-color;
+        }
+
+        &.ng-dirty {
+            border: 1px solid #ccc;
+        }
     }
-
-    &.ng-dirty {
-      border: 1px solid #ccc;
-    }
-  }
 
 }
 
 p.error {
-  margin: 0;
-  color: $error-color;
-  float: right;
+    margin: 0;
+    color: $error-color;
+    float: right;
 }
